# jobflow-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  ROADMAP.md  nixpacks.toml  railway.json
.github/workflows/: ci.yml
chrome-extension/: background.js  manifest.json  popup.css  popup.html  popup.js
docs/: agentic-features.md  dockerfile-migration.md
jobflow_api/: Dockerfile  Procfile  __init__.py  config.py  dependencies.py  main.py  nixpacks.toml  pyproject.toml  railway.toml
jobflow_api/routers/: health.py  jobs.py  user_settings.py
jobflow_api/schemas/: job.py  settings.py
jobflow_api/services/: scraper.py
jobflow_api/tests/: test_api.py  test_integration.py
jobflow_mvp/: .pre-commit-config.yaml  README.md  __init__.py  main.py  pyproject.toml
jobflow_mvp/.github/workflows/: ci.yml
jobflow_mvp/agents/: __init__.py  job_scraper_agent.py
jobflow_mvp/data/: jobs.csv
jobflow_mvp/tests/: test_basic.py
jobflow_mvp/tools/: __init__.py  extract_job_fields.py  fetch_webpage.py  write_to_csv.py
shared/: __init__.py  alembic.ini  crypto.py  pyproject.toml
shared/alembic/: env.py
shared/alembic/versions/: aaea80e1b6e8_add_stage_column.py  ace119c51d67_create_jobs_table.py  fc16f9e174e9_add_user_settings_table.py
shared/db/: __init__.py  models.py  session.py
shared/extraction/: __init__.py  bs4_extractor.py  domain_cache.py  geo_extractor.py  llm_extractor.py  pii_filter.py  pipeline.py  playwright_fetch.py  quality_check.py  robots_checker.py
shared/tests/: test_db.py  test_extraction.py
web/: Dockerfile  package-lock.json  package.json
web/src/: middleware.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/account/: page.tsx
web/src/app/api/jobs/: route.ts
web/src/app/privacy/: page.tsx
web/src/app/signin/: page.tsx
web/src/components/: AuthForm.tsx  ExportButton.tsx  JobCardList.tsx  JobDetailsSheet.tsx  JobForm.tsx  JobsTable.tsx  KanbanBoard.tsx  LandingPage.tsx  StageFilter.tsx  UserMenu.tsx
web/src/components/ui/: sheet.tsx
web/src/lib/: api-headers.ts  api.ts  auth-client.ts  auth.ts  parseDescription.ts
(+8 files in other folders)
