[project]
name = "jobflow-api"
version = "0.1.0"
description = "FastAPI backend for Jobflow"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.12",
    "slowapi>=0.1.9",
    "jobflow-shared",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jobflow_api"]

[tool.uv.sources]
jobflow-shared = { path = "../shared", editable = true }

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008", "E402"]  # B008: Depends() in defaults, E402: load_dotenv before imports
