[project]
name = "jobflow-shared"
version = "0.1.0"
description = "Shared utilities for Jobflow agents"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "beautifulsoup4>=4.12",
    "playwright>=1.40",
    "google-adk>=1.0.0",
    "requests>=2.31",
    "trafilatura>=1.6",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
